Checkout: Prevent horizontal scroll due to sticky field

--- a/pages/_appStyles.css
+++ b/pages/_appStyles.css
@@ -22,6 +22,11 @@
   src: url("/IBMPlexSans-Bold.woff") format("woff");
 }
 
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #f2f4f8;
   font-family: "IBM Plex Sans", sans-serif;
